syntax = "proto3";
option csharp_namespace = "Slate.Networking.External.Protocol";

import "UUID.proto";
import "Vector.proto";

message ConnectToGameRequest {
	UUID CharacterId = 1;
}

message ClientRequestMove {
	Vector3 Location = 1;
	Vector3 Velocity = 2;
}

message GameClientUpdate {
	oneof Message {
		ConnectToGameRequest ConnectToGameRequest = 1;
		ClientRequestMove ClientRequestMove = 2;
	}
}